<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_loginregist">

    <LinearLayout
        android:id="@+id/cardLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_loginregist"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="#314C2C"
            android:textSize="40sp"
            android:fontFamily="@font/dongle_bold"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            android:labelFor="@+id/etLoginUsername"
            android:textColor="#314C2C"
            android:textSize="24sp"
            android:fontFamily="@font/dongle_bold"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_input_loginregist"
            android:inputType="text"
            android:autofillHints="username"
            android:paddingHorizontal="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/password"
            android:labelFor="@+id/etLoginPassword"
            android:textSize="24sp"
            android:fontFamily="@font/dongle_bold"
            android:textColor="#314C2C"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_input_loginregist"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:paddingHorizontal="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_button_loginregist"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:fontFamily="@font/dongle_bold"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/dont_have_account"
            android:textColor="#314C2C"
            android:fontFamily="@font/dongle_bold"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>